--- a/src/stying/App.scss
+++ b/src/stying/App.scss
@@ -1,9 +1,11 @@
 .App {
-  
   text-align: left;
-  color: purple;
+  color: white;
   
-  
+}
+
+html{
+  background-color: rgb(30, 12, 54);
 }
 
 div{
