--- a/src/stying/BurgerStyle.css
+++ b/src/stying/BurgerStyle.css
@@ -11,12 +11,12 @@
   
   /* Color/shape of burger icon bars */
   .bm-burger-bars {
-    background: #373a47;
+    background: #ffffff;
   }
   
   /* Color/shape of burger icon bars on hover*/
   .bm-burger-bars-hover {
-    background: #a90000;
+    background: #aaaaaa;
   }
   
   /* Position and sizing of clickable cross button */
@@ -44,6 +44,7 @@
     background: #373a47;
     padding: 2.5em 1.5em 0;
     font-size: 1.15em;
+    overflow-y: hidden !important;
   }
   
   /* Morph shape necessary with bubble or elastic */
