--- a/src/styling/App.scss
+++ b/src/styling/App.scss
@@ -1,6 +1,6 @@
 .App {
-  text-align: left;
   color: white;
+  font-size: 50px;
   
 }
 
@@ -8,6 +8,3 @@ html{
   background-color: rgb(30, 12, 54);
 }
 
-div{
-  top: 0em
-}
