--- a/src/styling/App.scss
+++ b/src/styling/App.scss
@@ -1,10 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&display=swap');
+
 .App {
   color: white;
   font-size: 50px;
+  font-family: 'BIZ UDPGothic', sans-serif;
   
 }
 
 html{
-  background-color: rgb(30, 12, 54);
+  background-color: rgb(27, 14, 44);
 }
 
+.BannerPic{
+  width: 50%;
+  height: auto;
+}
+
+h1{
+  margin-top: 0.5em;
+  font-size: 1em;
+  margin-left: 1em;
+  text-decoration: underline;
+}
+
+h2{
+  margin: 0.5em;
+  font-size: 0.8em;
+}
+
+p{
+  font-size: 0.45em;
+}
+
+.TextBox{
+  margin: auto;
+  margin-top: 1em;
+  text-align: center;
+  border: 1px solid;
+  border-radius: 10px;
+  width: 50%;
+}
