cleaned and improved

--- a/src/styling/disco.scss
+++ b/src/styling/disco.scss
@@ -1,21 +1,20 @@
 body{
     overflow-y: hidden;
+    
 }
-
-
 
 .Amogus{
     position:absolute;
     z-index: 100;
     top:10%;
-    left:25%;
+    left:25%; 
     width: 50%;
     @media only screen and (max-width: 600px){
       top: 40%;
       left: 25%;
       width: 50%;
     }
-    
+    cursor: url("discoCursor.png"), auto;
 }
 
 .Red{
