--- a/src/styling/App.scss
+++ b/src/styling/App.scss
@@ -37,6 +37,18 @@ p{
   text-align: center;
   border: 1px solid;
   border-radius: 10px;
-  width: 50%;
+  width: 90%;
   background-color: rgb(29, 4, 56);
+}
+
+.ImageBorderTop{
+  background-color: rgb(78, 0, 78);
+  height: 0.5em;
+}
+
+.ImageBorderBottom{
+  background-color: rgb(24, 0, 24);
+  height: 0.5em;
+  position: relative;
+  top: -0.25em;
 }
